<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_search"
        android:enabled="true"
        android:icon="@drawable/ic_search"
        android:title="@string/title_search"/>
    <item
        android:id="@+id/navigation_bookmark"
        android:enabled="true"
        android:icon="@drawable/ic_bookmark"
        android:title="@string/title_bookmark"/>
    <item
        android:id="@+id/navigation_add"
        android:enabled="true"
        android:icon="@drawable/ic_add"
        android:title="@string/title_add"/>
    <item
        android:id="@+id/navigation_list"
        android:enabled="true"
        android:icon="@drawable/ic_list"
        android:title="@string/title_list"/>
    <item
        android:id="@+id/navigation_mypage"
        android:enabled="true"
        android:icon="@drawable/ic_mypage"
        android:title="@string/title_mypage"/>


</menu>